# RDFAnalysis

./: .gitignore  .travis.yml  AnalysisAsTree_8md.html  BoostGraphBuilder_8h.html  BoostGraphBuilder_8h_source.html  CMakeLists.txt  CutflowDetail_8h.html  CutflowDetail_8h_source.html  CutflowWriter_8h.html  CutflowWriter_8h_source.html  DefaultBranchNamer_8cxx.html  DefaultBranchNamer_8h.html  DefaultBranchNamer_8h_source.html  EmptyDetail_8h.html  EmptyDetail_8h_source.html  Helpers_8cxx.html  Helpers_8cxx.js  Helpers_8h.html  Helpers_8h.js  Helpers_8h_source.html  IBranchNamer_8cxx.html  IBranchNamer_8h.html  IBranchNamer_8h_source.html  INodeWriter_8h.html  INodeWriter_8h_source.html  MD_AnalysisAsTree.html  MD_JobScheduler.html  MD_RDFNode.html  MD_RDataFrameIntro.html  MD_Systematics.html  NodeBase_8cxx.html  NodeBase_8h.html  NodeBase_8h.js  NodeBase_8h_source.html  NodeFwd_8h.html  NodeFwd_8h_source.html  Node_8h.html  Node_8h_source.html  Node_8md.html  OutputWriter_8h.html  (+168 more)
Doxygen/: Doxyfile
doxygen/: Doxyfile  mainpage.dox  mainpage.md  make_images.sh
doxygen/graphviz/: example_advanced_sel.dot  example_basic_sel.dot  example_basic_sel_node.dot  example_basic_sel_node_syst.dot
doxygen/markdown/: AnalysisAsTree.md  Node.md  RDataFrameIntroduction.md  Scheduler.md  Systematics.md  mainpage.md
include/RDFAnalysis/: CutflowDetail.h  CutflowWriter.h  CutflowWriter.icc  DefaultBranchNamer.h  EmptyDetail.h  Helpers.h  IBranchNamer.h  INodeWriter.h  Node.h  Node.icc  NodeBase.h  NodeBase.icc  NodeFwd.h  NodeStatistics.h  OutputWriter.h  OutputWriter.icc  ResultWrapper.h  RunMonitor.h  ScheduleNamer.h  Scheduler.h  Scheduler.icc  SchedulerBase.h  SysResultPtr.h  SysVar.h  TObjectWriter.h  TObjectWriter.icc  WeightStrategy.h
include/RDFAnalysis/Auditors/: DebugPrinter.h  GraphDrawer.h  GraphDrawer.icc  IAuditor.h
include/RDFAnalysis/Utils/: BoostGraphBuilder.h  BoostGraphBuilder.icc
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+59 more)
src/: CutflowWriter.cxx  DefaultBranchNamer.cxx  GraphDrawer.cxx  Helpers.cxx  IBranchNamer.cxx  Node.cxx  NodeBase.cxx  NodeStatistics.cxx  OutputWriter.cxx  RunMonitor.cxx  SchedulerBase.cxx  TObjectWriter.cxx  WeightStrategy.cxx
util/: jetres.cxx  monohbb.cxx  rdf-test.cxx  test-tree.cxx
